trunk/tests/should-not-compile/null-int.talc
// EXPECTED ERROR: variable "i" has an initializer of type null
i:int = null;
